# memore

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.yaml.example
.github/workflows/: build.yml
local-configs/lmstudio/: qwen3.6-35b-a3b.yaml
spike-configs/: deepseek-v4-flash.yaml  gemma-4-31b-it-nvfp4.yaml  glm-5-1-fp8.yaml  mistralai-devstral-2-123b-instruct-2512.yaml  qwen3-5-397b-a17b-nvfp4.yaml  qwen3-6-27b-fp8.yaml  qwen3-6-35b-a3b-fp8.yaml
src/: cara.rs  config.rs  llm.rs  main.rs  models.rs  storage.rs  tempr.rs
src/api/: mod.rs  models.rs  routes.rs
src/files/: extractor.rs  mod.rs  processor.rs
static/: app.js  index.html
