[package]
name = "hindsight"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = { version = "0.15", features = ["yaml"] }
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "compression-gzip", "trace"] }

# File processing
lopdf = "0.34"
pulldown-cmark = { version = "0.12", default-features = false }
notify = { version = "6", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"

# File upload handling
mime = "0.3"
mime_guess = "2.0"
futures-util = "0.3"
